@@ -67,12 +67,12 @@ public:
   };
 
 protected:
-  typedef _Const_traits<value_type> _ConstIteTraits;
+  typedef _Const_traits<value_type> _ConstTraits;
   
 public:
   //dums: need the following public for the __move_traits framework
   typedef _Rb_tree<key_type, key_compare,
-                   value_type, _STLP_SELECT1ST(value_type, _Key), _ConstIteTraits, _Alloc> _Rep_type;
+                   value_type, _STLP_SELECT1ST(value_type, _Key), _ConstTraits, _Alloc> _Rep_type;
   _Rep_type _M_t;  // red-black tree representing map
 public:
   typedef typename _Rep_type::pointer pointer;
@@ -245,11 +245,11 @@ public:
   };
 
 protected:
-  typedef _Const_traits<value_type> _ConstIteTraits;
+  typedef _Const_traits<value_type> _ConstTraits;
 public:
   //dums: need the following public for the __move_traits framework
   typedef _Rb_tree<key_type, key_compare, 
-                   value_type, _STLP_SELECT1ST(value_type, _Key), _ConstIteTraits, _Alloc> _Rep_type;
+                   value_type, _STLP_SELECT1ST(value_type, _Key), _ConstTraits, _Alloc> _Rep_type;
   _Rep_type _M_t;  // red-black tree representing multimap
 public:
   typedef typename _Rep_type::pointer pointer;
